--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -77,6 +77,9 @@ libloading = "0.8"
 scopeguard = "1"
 windows = { version = "0.62.2", features = ["Win32_Graphics_Imaging", "Win32_System_Com", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
 
+# Base64 编码（用于占位图传输）
+base64 = "0.22"
+
 [dev-dependencies]
 tempfile = "3"
 
