模糊背板的改进

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -76,7 +76,34 @@ trash = "5"
 # LibRaw 动态加载
 libloading = "0.8"
 scopeguard = "1"
-windows = { version = "0.62.2", features = ["Win32_Graphics_Imaging", "Win32_System_Com", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
+windows = { version = "0.62.2", features = [
+    "Win32_Graphics_Imaging",
+    "Win32_System_Com",
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_Foundation",
+    "Win32_Graphics_Gdi",
+    # Composition Backdrop 支持 (Windows 11)
+    "Win32_Graphics_Dwm",
+    "Win32_System_WinRT",
+    "Win32_System_WinRT_Graphics",
+    "Win32_System_WinRT_Graphics_Direct2D",
+    "Win32_System_WinRT_Composition",
+    "Win32_System_SystemInformation",
+    "UI_Composition",
+    "UI_Composition_Desktop",
+    "UI",
+    "Graphics_Effects",
+    "Foundation",
+    "Foundation_Collections",
+    "Foundation_Numerics",
+    "System",
+] }
+windows-numerics = "0.3"
+windows-collections = "0.3"
+windows-core = "0.62.2"
+
+# 快速模糊算法
+fastblur = "0.1"
 
 # Base64 编码（用于占位图传输）
 base64 = "0.22"
