--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tauri-apps/plugin-shell": "^2.3.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.24.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.9.6",
